--- a/hello-world/Dockerfile
+++ b/hello-world/Dockerfile
@@ -1,10 +1,43 @@
-FROM public.ecr.aws/lambda/nodejs:20
+# Define custom function directory
+ARG FUNCTION_DIR="/function"
 
-COPY app.mjs package*.json ./
+FROM node:20-bookworm
 
+# Include global arg in this stage of the build
+ARG FUNCTION_DIR
+
+# Install build dependencies
+RUN apt-get update && \
+    apt-get install -y \
+    g++ \
+    make \
+    cmake \
+    unzip \
+    libcurl4-openssl-dev
+
+# Copy function code
+RUN mkdir -p ${FUNCTION_DIR}
+COPY package*.json ${FUNCTION_DIR}
+
+WORKDIR ${FUNCTION_DIR}
+
+# Install Node.js dependencies
 RUN npm install
-# If you are building your code for production, instead include a package-lock.json file on this directory and use:
-# RUN npm ci --production
 
-# Command can be overwritten by providing a different command in the template directly.
+# Install the runtime interface client
+RUN npm install aws-lambda-ric
+
+ENV PLAYWRIGHT_BROWSERS_PATH=0
+
+RUN npx -y playwright install --with-deps chromium
+
+# Required for Node runtimes which use npm@8.6.0+ because
+# by default npm writes logs under /home/.npm and Lambda fs is read-only
+ENV NPM_CONFIG_CACHE=/tmp/.npm
+
+COPY app.mjs ${FUNCTION_DIR}
+
+# Set runtime interface client as default command for the container runtime
+ENTRYPOINT ["/usr/local/bin/npx", "aws-lambda-ric"]
+# Pass the name of the function handler as an argument to the runtime
 CMD ["app.lambdaHandler"]
