--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,7 +7,10 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": ">=1.6.0"
+    "@mozilla/readability": "^0.5.0",
+    "jsdom": "^25.0.1",
+    "playwright": "^1.47.2",
+    "turndown": "^7.2.0"
   },
   "scripts": {
     "test": "mocha tests/unit/"
